Added pie chart to show casualties by age range

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
           <p> Males are more than twice as likely to be a casualty in a road accident in London.</p>
           </div>
           <div class="col-md-3 col-sm-10 card text-center card-styling pie-donut-section">
-            <h5>Percentage of incidents per day of the week</h3>
-          <div id="incidents_day_of_week"></div>
+            <h5>Casualties per age range</h3>
+          <div id="casualties_age_range"></div>
           </div>
           <div class="col-md-3 col-sm-10 card text-center card-styling pie-donut-section ">
             <h5>Number of casulaties per casualty class</h3>
