--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
   
 <!-- Navigation -->    
-    <nav class="navbar navbar-expand-lg navbar-colour">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-colour">
       <a class="navbar-brand logo" href="#">
         <img src="assets/images/logo_image.png" width="30" height="30" class="d-inline-block align-top" alt="">
         London Road Casualties 2010-2014
@@ -55,9 +55,9 @@
       <div class=" container-fluid">
         <div class="row justify-content-center">
           <div class="col-10 card text-center card-styling intro">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p> This dashboard displays a data set of casualties on the roads of London between 2010-2014. The data includes all age groups and both
+            severe and fatal incidents. This set of charts and data will help give you an idea of the safest areas on London to be on the road or a pedestrians.
+            It will give you an idea of areas to avoid at what time.
             </p>
           </div>
         </div>
@@ -75,15 +75,21 @@
         <div class="row justify-content-center">
           <div class="col-md-3 col-sm-10 card text-center card-styling top-stats">
             <h5>No. of incidents 2010-2014</h6>
-            <div class="num-display" id="total-num-of-incidents"><i class="fas fa-clipboard-list top-stats-icon"></i></div>
+            <div class="num-display" id="total-num-of-incidents"><i class="fas fa-clipboard-list top-stats-icon"></i>13,206</div>
+            <p> London had a population of over <a href="https://www.ukpopulation.org/london-population/" target="blank">8 million</a> and around
+            <a href="http://www.uncsbrp.org/tourism.htm" target="blank">30 million</a> visitors per year over this time period. You are unlikely
+            to be involved in a traffic incident even though the roads can get very busy.
+            </p>
           </div>
           <div class="col-md-3 col-sm-10 card text-center card-styling top-stats">
             <h5>Percentage of incidents that are serious</h6>
             <div class="num-display" id="percentage-incidents-serious"><i class="fas fa-exclamation top-stats-icon"></i></div>
+            <p>You are much more likely to have a serious injury if in volved in a traffic incident in London rather than a fatal one. This could potentially be a life changing injury though.</p>
           </div>
           <div class="col-md-3 col-sm-10 card text-center card-styling top-stats">
             <h5>Percentage of incidents that are fatal</h6>
             <div class="num-display" id="percentage-incidents-fatal"><i class="fas fa-skull-crossbones top-stats-icon"></i></div>
+            <p>Although the number of fatal incidents is low you should still stay vigilant when out and about on the streets of London.</p>
           </div>
         </div>
       </div>
@@ -104,17 +110,20 @@
           <div class="col-md-3 col-sm-10 card text-center card-styling pie-donut-section">
             <h5>Number of males and females involved in incidents</h3>
           <div id="male_female_casualties"></div>
-          <p> Males are more than twice as likely to be a casualty in a road accident in London.</p>
+          <p> Males are more than twice as likely to be a casualty in a road accident in London. This is true
+          acorss the UK with men accounting for 74% road traffic deaths and 70% of serious injuries according to the 
+          road safety charity <a href="https://www.brake.org.uk/facts-resources/1593-driver-gender" target="blank">Brake.</a> 
+          According to their data, on average men also cover more than twice as many miles as women per year.</p>
           </div>
           <div class="col-md-3 col-sm-10 card text-center card-styling pie-donut-section">
             <h5>Casualties per age range</h3>
           <div id="casualties_age_range"></div>
+          <p>Teenagers and young adults are the most likely to be involved in an incident with more than half of incidents involve 13-38 year olds.</p>
           </div>
           <div class="col-md-3 col-sm-10 card text-center card-styling pie-donut-section ">
             <h5>Number of casulaties per casualty class</h3>
           <div id="casualty_class_percentage"></div>
-          <p>Drivers and riders are more likely to be casualties in incidents, it's slightly safer to be 
-          a pedestrian n the streets of London</p>
+          <p>Drivers and riders are more likely to be casualties in the incidents, pedestrians are about 20% less likely to be involved in an incident. You will be safest as a passenger.</p>
           </div>
           
         </div>
@@ -151,10 +160,10 @@
 <!-- Scatter chart- day of week and time incidents occur -->    
      <div class="container">
       <div class="row justify-content-center ">
-        <div class="col-12 card text-center">
+        <div class="col-12 card text-center card-styling vehicle-type-rowchart">
           <h6>Scatter chart day of week and time of day </h6>
           
-          <div id=""></div>
+          <div id="hour_scatter_plot"></div>
         </div>
       </div>
     </div>
