styled helper click pop up modal. Decreased opacity of sticky nav bar.

--- a/index.html
+++ b/index.html
@@ -40,29 +40,30 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <button id="helpBtn" class="nav-link nav-link-colour">Open Modal</button>
+            <button id="helpBtn" class="nav-link nav-link-colour">Help</button>
           </li>
           <div id="helpModal" class="help-modal">
-            <div class="help-content">
+            <div class="help-content card-styling">
               <div class="help-header">
-                <h2>Modal Header</h2>
-                <span class="help_close">&times;</span>
+                <h2>Help- A quick guide to this dashboard</h2>
+                <span class="help_close"><i class="fas fa-times-circle"></i></span>
               </div>
+              <hr>
               <div class="help-body">
-                <p>This dashboard uses interactive charts to display a data set on London road casualties between 2010-2014. Each chart can filtered tp specific 
-                data by clicking on it, this will show across all the charts. For exmaple if you click 'Female' in the first piechart all the charts will show 
-                only data for females. Or if you click 'Ealing' on the bar chart you will only see the data for Ealing. If you click multiple section you will 
-                see combined data so if you had clicked Ealing and then Islington in the bar chat you will see combined results across the charts.
+                <p>This dashboard uses interactive charts to display a data set on London road casualties between 2010-2014. Each chart can filtered to specific 
+                data by clicking on it, this will show across all the charts. For example if you click 'Female' in the first piechart all the charts will show 
+                only data for females. Or if you click Ealing on the bar chart you will only see the data for Ealing across all charts. If you click multiple sections you will 
+                see combined data so if you had clicked Ealing and then Islington in the bar char you will see combined results across the charts.
                 </p>
                 <p>Please note: the first number display showing the number of incidents 2010-2014 will not change and the 2nd number display showing percentage
-                of severe and fatal incidents are not clickable but will change when the charts or click to show that specific data set.
+                of severe and fatal incidents are not clickable but will change when the charts are clicked to reflect that specific data set.
                 </p>
                 <p>
                 To reset the data at anytime click the reset button at the top right of the screen in the main navigation bar, this will be visible as you scroll
                 down the page.
                 </p>
                 <p>
-                The data was sourced from <a href="https://data.london.gov.uk/" target="blank"> London Datastore</a> , some rows of data that were not necassary for this 
+                The data was sourced from <a href="https://data.london.gov.uk/" target="blank"> London Datastore</a>, some rows of data that were not necassary for this 
                 dashboard were removed, to see the original data see the page <a href="https://data.london.gov.uk/dataset/road-casualties-severity-borough" target="blank"> Road Casualties by Severity</a>.   
                 </p>
               </div>
