--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <button id="helpBtn" class="nav-link nav-link-colour">Help</button>
+            <button id="helpBtn" class="nav-link help-btn">Help</button>
           </li>
           <div id="helpModal" class="help-modal">
             <div class="help-content card-styling">
@@ -70,7 +70,7 @@
             </div>
           </div>
           <li class="nav-item">
-            <a class="nav-link nav-link-colour" href="#">Reset</a>
+            <button class="nav-link">Reset</button>
           </li>
         </ul>  
       </div>
