removed background image and kept white as there was too much visually going on. Changed font as it now looked too heavy and chose lighter ones. Changed font colour to black as it looks better with the white background and fonts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/dc.min.css" type="text/css"/>
     <!-- Google Fonts and Fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Cabin|Hammersmith+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300|Montserrat&display=swap" rel="stylesheet">
     <!-- Favicon --> 
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
     <!-- CSS Style Sheet -->
@@ -88,7 +88,7 @@
             <div class="col-9 card text-center card-styling intro">
               <h3 class="intro-header">London Road Casualties 2010-2014</h3>
               <p> Welcome to this dashboard that displays a data set of casualties on the roads of London between 2010-2014. This range of displays and charts will give you an overview of the
-              risks factors to look out for on London's roads if your a driver, passenger or pedestrian.</br>
+              risks factors to look out for on London's roads if your a driver, passenger or pedestrian.<br>
               You can gain an insight into keeping safe by filtering these interactive charts to see a more specific data set. Click on the section of the chart that you would like to see information for 
               and all of the charts will then change to display that data. You can reset them at any time by clicking the 'Reset' button at the top right of the screen. For more details and examples click the 'Help' button at the top right of the screen.
               </p>
@@ -102,7 +102,7 @@
         <div class="container-fluid">
           <div class="row justify-content-center">
             <div class="col-xl-3 col-md-10 card text-center card-styling top-stats">
-              <h5 class="chart-title">No. of incidents between the years 2010-2014</h6>
+              <h5 class="chart-title">No. of incidents between 2010-2014</h5>
               <div class="num-display" id="total-num-of-incidents"><i class="fas fa-clipboard-list top-stats-icon"></i>13,206</div>
               <p> London had a population of over <a class="link-style" href="https://www.ukpopulation.org/london-population/" target="blank">8 million</a> and around
               <a class="link-style" href="http://www.uncsbrp.org/tourism.htm" target="blank">30 million</a> visitors per year over this time period. You are fairly unlikely
@@ -110,12 +110,12 @@
               </p>
             </div>
             <div class="col-xl-3 col-md-10 card text-center card-styling top-stats">
-              <h5 class="chart-title">Percentage of incidents that are serious</h6>
+              <h5 class="chart-title">Percentage of serious incidents</h6>
               <div class="num-display" id="percentage-incidents-serious"><i class="fas fa-exclamation top-stats-icon"></i></div>
               <p>You are much more likely to have a serious injury if in volved in a traffic incident in London rather than a fatal one. This could potentially be a life changing injury though.</p>
             </div>
             <div class="col-xl-3 col-md-10 card text-center card-styling top-stats">
-              <h5 class="chart-title">Percentage of incidents that are fatal</h6>
+              <h5 class="chart-title">Percentage of fatal incidents</h6>
               <div class="num-display" id="percentage-incidents-fatal"><i class="fas fa-skull-crossbones top-stats-icon"></i></div>
               <p>Although the number of fatal incidents is low you should still stay vigilant when out and about on the streets of London. The percentage if fatal incidents increases to
               7% when the data is filtered to just pedestrians.</p>
