Changed intro text and help text to left aligned so they are more reader friendly. removed images i will not be using

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     
 <!-- Header -->      
     <header>
-      <img class="img-fluid" src="assets/images/police_header_t.png" alt="time lapse image of streaky lights from traffic and clear red phone box">
+      <img class="img-fluid" src="assets/images/police_header.png" alt="time lapse image of streaky lights from traffic and clear red phone box">
     </header>
     
     <main id="back-to-top" class="container-fluid main-container">
@@ -84,7 +84,7 @@
       <section> 
         <div class="container-fluid">
           <div class="row justify-content-center">
-            <div class="col-xl-10 col-md-12 card text-center card-styling intro">
+            <div class="col-xl-10 col-md-12 card card-styling intro">
               <h3 class="intro-header">London Road Casualties 2010-2014</h3>
               <p> Welcome to this dashboard that displays a data set of casualties on the roads of London between 2010-2014. This range of displays and charts will give you an overview of the
               risks factors to look out for on London's roads if your a driver, passenger or pedestrian.<br>
