--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
     <!-- JS Libraries -->
-    <script src="assets/js/d3.min.js"></script>
-    <script src="assets/js/crossfilter.min.js"></script>
-    <script src="assets/js/dc.min.js"></script>
-    <script src="assets/js/queue.min.js"></script>
+    <script src="assets/js/libraries/d3.min.js"></script>
+    <script src="assets/js/libraries/crossfilter.min.js"></script>
+    <script src="assets/js/libraries/dc.min.js"></script>
+    <script src="assets/js/libraries/queue.min.js"></script>
     <script src="assets/js/graphs.js"></script>
     <!-- JS Helper Click Popup -->
     <script src="assets/js/helper_reset.js"></script>
@@ -75,7 +75,7 @@
     
 <!-- Header -->      
     <header>
-      <img class="img-fluid" src="assets/images/police_header.png" alt="time lapse image of streaky lights from traffic and clear red phone box">
+      <img class="img-fluid" src="assets/images/police_header.png" alt="photo of police car and bike at the scene of an accident">
     </header>
     
     <main id="back-to-top" class="container-fluid main-container">
